simple-project-1/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: apps-ingress-path
  namespace: mbidi
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: company.com
    http:
      paths:
      - path: /dashboard
        pathType: Prefix
        backend:
          service:
            name: app1-service
            port:
              number: 80
      - path: /reports
        pathType: Prefix
        backend:
          service:
            name: app2-service
            port:
              number: 80
